# arcade-template

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml  server.py
{{ cookiecutter.project_slug }}/web/: index.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py
