[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "arcade=={{ cookiecutter.arcade_version }}"
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "bottle"
]

[tool.setuptools]
packages = ["{{ cookiecutter.project_slug }}"]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.project_slug }}._version.__version__"}