[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "arcade=={{ cookiecutter.arcade_version }}"
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "bottle"
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""
data = {
  assets = "assets"
}
